# favorite_logging_setup

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py  util.py
src/td_log/: util.py
